--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /HomeWork1/nbproject/private/
 /HomeWork/nbproject/private/
 /HomeWork/build/
+/SS03-30122019/nbproject/private/
+/SS03-30122019/build/
