--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /HomeWork/build/
 /SS03-30122019/nbproject/private/
 /SS03-30122019/build/
+/SS04-03012020/nbproject/private/
+/SS04-03012020/build/
